# ar-screen

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  LICENSE
cmake-modules/: DefinePostBuildResourceCopyRules.cmake  FindCURL.cmake  FindCrossroads.cmake  FindDLib.cmake  FindFreeGLUT.cmake  FindFreetype-gl.cmake  FindHalide.cmake  FindLeap.cmake  FindNSS.cmake  FindNdkProfiler.cmake  FindOpenGL.cmake  FindProtobuf.cmake  FindSDL.cmake  FindZLIB.cmake  FixupQt5Targets.cmake  LeapCMakeTemplates.cmake  Stringify.cmake  Stringify.sh.in  TargetCopyLocalFiles.cmake  copy_files_to_dirs_linux.sh.in
src/: CMakeLists.txt
src/ARScreen/: ARScreen.cpp  ARScreen.h  ARScreen.plist.in  Animation.h  CMakeLists.txt  EigenTypes.h  GLShaderLoader.h  Globals.cpp  Globals.h  HandInfo.cpp  HandInfo.h  ImagePassthrough.cpp  ImagePassthrough.h  Mirror.cpp  Resource.h  ResourceManager.h  Scene.cpp  Scene.h  Shaders.h  Singleton.h  Version.h.in  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  stdafx.h
src/ARScreen/GLTexture2FreeImage/: GLTexture2FreeImage.h
src/ARScreen/GLTexture2Image/: GLTexture2Image.cpp
src/ARScreen/Leap/GL/: BufferObject.cpp  BufferObject.h  ColorComponent.h  Error.h  GLHeaders.h  Mesh.h  MeshException.h  ModelView.h  Projection.cpp  Projection.h  Rgb.h  Rgba.h  Shader.cpp  ShaderMatrices.h  Texture2.h  Texture2Exception.h  Texture2Params.cpp  Texture2PixelData.cpp  Texture2PixelData.h  VertexAttribute.h  VertexBufferObject.h
src/ARScreen/Leap/GL/Internal/: ColorComponent.h  EigenTypes.h  Map.h  Meta.h  ShaderFrontend.h  ShaderUniform.h  TypeMap.h  UniformTraits.h  VertexAttribute.h
src/ARScreen/LeapListener/: LeapListener.cpp  LeapListener.h
src/ARScreen/OculusVR/: OculusVR.cpp  OculusVR.h
src/ARScreen/Primitives/: LambertianMaterial.h  PrimitiveBase.h  PrimitiveGeometry.h  Primitives.cpp  Primitives.h  RenderState.h  ScopeGuard.h  TexturedFrame.cpp  TexturedFrame.h
src/ARScreen/SceneGraph/: SceneGraphNode.h  SceneGraphNodeProperty.h  SceneGraphNodeValues.h
src/ARScreen/TextureFont/: TextPrimitive.cpp  TextPrimitive.h  TextureFont.cpp  TextureFont.h
src/GLTexture2Image/: CMakeLists.txt  GLTexture2FreeImage.cpp  GLTexture2Image.cpp  GLTexture2Image.h  stdafx.h
src/Leap/: CMakeLists.txt
src/Leap/GL/: BufferObject.cpp  CMakeLists.txt  Common.h  Exception.h  MeshAssembler.h  ModelView.cpp  ModelView.h  Projection.cpp  Projection.h  ResourceBase.h  Shader.cpp  Shader.h  ShaderException.h  ShaderFrontend.h  ShaderMatrices.cpp  ShaderMatrices.h  Texture2.cpp  Texture2Params.cpp  Texture2Params.h  Texture2PixelData.cpp  VertexBufferObjectException.h  stdafx.h
src/Leap/GL/Internal/: Tuple.h  Typle.h  UniformUploader.h
src/LeapListener/: CMakeLists.txt  LeapListener.cpp  stdafx.h
src/OSInterface/: AudioVolumeInterface.cpp  AudioVolumeInterface.h  AudioVolumeInterfaceMac.cpp  AudioVolumeInterfaceMac.h  AudioVolumeInterfaceWin.cpp  AudioVolumeInterfaceWin.h  CMakeLists.txt  MediaInterface.cpp  MediaInterface.h  MediaInterfaceMac.h  MediaInterfaceMac.mm  MediaInterfaceWin.cpp  MediaInterfaceWin.h  OSApp.h  OSAppMac.h  OSAppMac.mm  OSAppManager.cpp  OSAppManager.h  OSAppWin.cpp  OSAppWin.h  OSCursor.cpp  OSCursor.h  OSCursorMac.cpp  OSCursorMac.h  OSCursorWin.cpp  OSCursorWin.h  OSGeometry.h  OSScreen.h  OSScreenBase.h  OSScreenMac.mm  OSScreenWin.cpp  OSVirtualScreen.cpp  OSVirtualScreen.h  OSVirtualScreenMac.h  OSVirtualScreenMac.mm  OSVirtualScreenWin.cpp  OSVirtualScreenWin.h  OSWindow.cpp  OSWindow.h  OSWindowEvent.h  (+12 more)
src/OculusVR/: CMakeLists.txt  OculusVR.cpp  stdafx.h
src/Primitives/: CMakeLists.txt  DropShadow.cpp  DropShadow.h  LambertianMaterial.h  PrimitiveBase.h  PrimitiveGeometry.cpp  PrimitiveGeometry.h  Primitives.cpp  RenderState.h  SVGPrimitive.cpp  SVGPrimitive.h  SceneGraphNode.h  SceneGraphNodeProperties.h  SceneGraphNodeValues.h  ShaderBindingScopeGuard.h  TexturedFrame.cpp  stdafx.h
src/TextureFont/: CMakeLists.txt  TextPrimitive.cpp  TextPrimitive.h  TextureFont.cpp  TextureFont.h  stdafx.h
src/utility/: CMakeLists.txt  HandleUtilitiesWin.h  PlatformInitializerMac.mm  PlatformInitializerWin.cpp  PlatformInitializerWin.h  SamplePrimitives.cpp  SamplePrimitives.h  Shaders.h  SingleInstanceEnforcerWin.cpp  SingleInstanceEnforcerWin.h  Updatable.h  Utilities.h  WindowsIncludes.h  stdafx.h
